objects/fpro__FieldPro__c.object
<CustomObject>
    <fields>
        <fullName>fpro__API_Name__c</fullName>
        <description>Unique API name for this field in SF.</description>
        <inlineHelpText>Unique API name for this field in SF.</inlineHelpText>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Alerts__c</fullName>
        <description>Field alerts to display to user</description>
        <formula>IF(NOT(ISBLANK(fpro__NamespacePrefix__c)), &quot;MANAGED: This is a managed field, and cannot be controlled.&quot; &amp; BR() &amp; BR() &amp; &quot;&quot;, &quot;&quot;) 
+
IF(fpro__References_Profile_Visibility_Count__c = 0, &quot;DEPRECATE: This field is not visible to any profile.&quot; &amp; BR() &amp; BR() &amp; &quot;&quot;, &quot;&quot;)
+
IF(fpro__Is_Deleted__c, &quot;DELETED: This field has been deleted from the org.&quot; &amp; BR() &amp; BR() &amp; &quot;&quot;, &quot;&quot;)
+
IF(ISBLANK(fpro__Description__c), &quot;MISSING: Description is missing.&quot; &amp; BR() &amp; BR() &amp; &quot;&quot;, &quot;&quot;) 
+
IF(ISBLANK(fpro__Inline_Help_Text__c), &quot;MISSING: Inline Help Text is missing.&quot; &amp; BR() &amp; BR() &amp; &quot;&quot;, &quot;&quot;) 
+
IF(ISBLANK(fpro__Compliance_Categorization__c), &quot;MISSING: Compliance Categorization is missing.&quot; &amp; BR() &amp; BR() &amp; &quot;&quot;, &quot;&quot;) 
+
IF(ISBLANK(fpro__Data_Owner__c), &quot;MISSING: Data Owner is missing.&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field alerts to display to user</inlineHelpText>
        <label>Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Call_1_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>set to True if the analysis call is completed (used in VF page)</description>
        <inlineHelpText>set to True if the analysis call is completed (used in VF page)</inlineHelpText>
        <label>zz_Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Call_2_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>set to True if the analysis call is completed (used in VF page)</description>
        <inlineHelpText>set to True if the analysis call is completed (used in VF page)</inlineHelpText>
        <label>zz_Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Call_3_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>set to True if the analysis call is completed (used in VF page)</description>
        <inlineHelpText>set to True if the analysis call is completed (used in VF page)</inlineHelpText>
        <label>zz_Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Compliance_Categorization__c</fullName>
        <description>The compliance acts, definitions, or regulations that are related to the field’s data.</description>
        <inlineHelpText>The compliance acts, definitions, or regulations that are related to the field’s data.</inlineHelpText>
        <label>Compliance Categorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the user who created this field in SF.</description>
        <inlineHelpText>Lookup to the user who created this field in SF.</inlineHelpText>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FieldPro1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fpro__Created_Date__c</fullName>
        <description>Date when this field was created in SF.</description>
        <inlineHelpText>Date when this field was created in SF.</inlineHelpText>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fpro__Created_In_Last_X_Days__c</fullName>
        <defaultValue>365</defaultValue>
        <description>Optionally override the default 365 days, when calculating the field usage for this field.</description>
        <inlineHelpText>Optionally override the default 365 days, when calculating the field usage for this field.</inlineHelpText>
        <label>(Deleted) Created In Last X Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__Custom_Admin_Notes__c</fullName>
        <description>Add custom notes when making changes to the field properties, or when/how this field is updated etc.</description>
        <inlineHelpText>Add custom notes when making changes to the field properties, or when/how this field is updated etc.</inlineHelpText>
        <label>Custom Admin Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fpro__Data_Owner__c</fullName>
        <description>The person or group associated with this field. The data owner understands the importance of the field’s data to your company and might be responsible for determining the minimum data sensitivity level.</description>
        <inlineHelpText>The person or group associated with this field. The data owner understands the importance of the field’s data to your company and might be responsible for determining the minimum data sensitivity level.</inlineHelpText>
        <label>Data Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Data_Sensitivity_Level__c</fullName>
        <description>The sensitivity of the data contained in this field.</description>
        <inlineHelpText>The sensitivity of the data contained in this field.</inlineHelpText>
        <label>Data Sensitivity Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Default_Value__c</fullName>
        <description>If specified, represents the default value of the field.</description>
        <inlineHelpText>If specified, represents the default value of the field.</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Description__c</fullName>
        <description>Description on the field in SF.</description>
        <inlineHelpText>Description on the field in SF.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fpro__Error_Code__c</fullName>
        <description>Error recorded while parsing apex.</description>
        <inlineHelpText>Error recorded while parsing apex.</inlineHelpText>
        <label>zz_Deprecated</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__Error_DML__c</fullName>
        <description>Error recorded while performing DML statement in the apex.</description>
        <inlineHelpText>Error recorded while performing DML statement in the apex.</inlineHelpText>
        <label>zz_Deprecated</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__Error_Field_Data__c</fullName>
        <description>Error recorded while getting the field data.</description>
        <inlineHelpText>Error recorded while getting the field data.</inlineHelpText>
        <label>Error Field Data</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__Error_Populated__c</fullName>
        <description>Error recorded while calculating the field usage.</description>
        <inlineHelpText>Error recorded while calculating the field usage.</inlineHelpText>
        <label>Error Populated</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__FieldTrip_SOQL__c</fullName>
        <description>FieldTrip populate percentage criteria</description>
        <inlineHelpText>FieldTrip populate percentage criteria</inlineHelpText>
        <label>FieldTrip SOQL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fpro__Field_Score__c</fullName>
        <description>Roughly calculated score for this salesforce field using other parameters like field usage, apex/metadata references etc. Score 0 means the field is a potential candidate for deletion, as probably not being used anywhere.</description>
        <formula>IF(ISNULL(fpro__Last_Refresh_Date_MCD__c), -1, 
(
IF(fpro__Populate_Percentage__c &lt; (10/100), 0, 30)
+
IF(fpro__References_Apex_Class_Count__c = 0, 0, 5)
+
IF(fpro__References_Apex_Trigger_Count__c = 0, 0, 5)
+
IF(fpro__References_Visualforce_Page_Count__c = 0, 0, 5)
+
IF(fpro__References_Visualforce_Components_Count__c = 0, 0, 5)
+
IF(fpro__References_Formula_Fields_Count__c = 0, 0, 5)
+
IF(fpro__References_Page_Layouts_Count__c = 0, 0, 5)
+
IF(fpro__References_Profile_Visibility_Count__c = 0, 0, 5)
+
IF(fpro__References_Permission_Sets_Count__c = 0, 0, 5)
+
IF(fpro__References_Validation_Rules_Count__c = 0, 0, 5)
+
IF(fpro__References_Workflow_Field_Updates_Count__c = 0, 0, 5)
+
IF(fpro__References_Workflow_Rules_Count__c = 0, 0, 5)
+
IF(fpro__References_Flow_Count__c = 0, 0, 5)
+
IF(fpro__References_Reports_Count__c = 0, 0, 5)
+
IF(fpro__References_ReportType_Count__c = 0, 0, 5)
+
IF(fpro__References_Others_Count__c = 0, 0, 5)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Roughly calculated score for this salesforce field using other parameters like field usage, apex/metadata references etc. Score 0 means the field is a potential candidate for deletion, as probably not being used anywhere.</inlineHelpText>
        <label>Field Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__Field_Type_Tooling__c</fullName>
        <description>Indicates the field type for the field in SF. Fetched using Tooling API.</description>
        <inlineHelpText>Indicates the field type for the field in SF. Fetched using Tooling API.</inlineHelpText>
        <label>Field Type (Tooling)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Field_Type__c</fullName>
        <description>Indicates the field type for the field in SF. Returns one of the DisplayType enum values, depending on the type of field. Fetched using DescribeFieldResult.</description>
        <inlineHelpText>Indicates the field type for the field in SF. Returns one of the DisplayType enum values, depending on the type of field. Fetched using DescribeFieldResult.</inlineHelpText>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Field_Usage__c</fullName>
        <description>Tracks whether the field is in use.</description>
        <inlineHelpText>Tracks whether the field is in use.</inlineHelpText>
        <label>Field Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Formula_Value__c</fullName>
        <description>Formula value for this field in SF.</description>
        <inlineHelpText>Formula value for this field in SF.</inlineHelpText>
        <label>Formula Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fpro__Inline_Help_Text__c</fullName>
        <description>Inline Help Text on the field in SF.</description>
        <inlineHelpText>Inline Help Text on the field in SF.</inlineHelpText>
        <label>Inline Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Is_Custom_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the field is a custom field (true) or not (false).</description>
        <inlineHelpText>Indicates whether the field is a custom field (true) or not (false).</inlineHelpText>
        <label>Is Custom Field?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the field is deleted from Salesforce (true) or not (false).</description>
        <inlineHelpText>Indicates whether the field is deleted from Salesforce (true) or not (false).</inlineHelpText>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Is_External_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this field an External Id on that object?</description>
        <inlineHelpText>Is this field an External Id on that object?</inlineHelpText>
        <label>Is External Id?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Is_Formula_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the field is a custom formula field (true) or not (false).</description>
        <inlineHelpText>Indicates whether the field is a custom formula field (true) or not (false).</inlineHelpText>
        <label>Is Formula Field?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the field requires a value on creation (true) or not (false).</description>
        <inlineHelpText>Indicates whether the field requires a value on creation (true) or not (false).</inlineHelpText>
        <label>Is Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Is_Unique__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the field is unique (true) or not (false).</description>
        <inlineHelpText>Indicates whether the field is unique (true) or not (false).</inlineHelpText>
        <label>Is Unique?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Label__c</fullName>
        <description>Label for the field in SF.</description>
        <inlineHelpText>Label for the field in SF.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the user who last modified this field in SF.</description>
        <inlineHelpText>Lookup to the user who last modified this field in SF.</inlineHelpText>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FieldPro</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fpro__Last_Modified_Date__c</fullName>
        <description>Date when this field was last modified in SF.</description>
        <inlineHelpText>Date when this field was last modified in SF.</inlineHelpText>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fpro__Last_Refresh_Date_MCD__c</fullName>
        <description>The date on which metadata references were calculated on this custom field.</description>
        <inlineHelpText>The date on which metadata references were calculated on this custom field.</inlineHelpText>
        <label>Last Refresh Date (MCD)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fpro__Last_Refresh_Date_Usage__c</fullName>
        <description>The date on which populate % was calculated on this custom field.</description>
        <inlineHelpText>The date on which populate % was calculated on this custom field.</inlineHelpText>
        <label>Last Refresh Date (Usage)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fpro__Last_Refresh_Date__c</fullName>
        <description>Timestamp of when the field analysis was last run.</description>
        <inlineHelpText>Timestamp of when the field analysis was last run.</inlineHelpText>
        <label>zz_Deprecated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fpro__Length__c</fullName>
        <description>Length of the field in SF.</description>
        <inlineHelpText>Length of the field in SF.</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__ManageableState__c</fullName>
        <description>Indicates the manageable state of the specified component that is contained in a package.</description>
        <inlineHelpText>Indicates the manageable state of the specified component that is contained in a package.</inlineHelpText>
        <label>ManageableState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__NamespacePrefix__c</fullName>
        <description>The namespace of the custom field. A custom field can be in an extension namespace different than the object.</description>
        <inlineHelpText>The namespace of the custom field. A custom field can be in an extension namespace different than the object.</inlineHelpText>
        <label>NamespacePrefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Object_API_Name__c</fullName>
        <description>FIeld Object API name in SF.</description>
        <inlineHelpText>FIeld Object API name in SF.</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Object_Label__c</fullName>
        <description>FIeld Object label in SF.</description>
        <inlineHelpText>FIeld Object label in SF.</inlineHelpText>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Picklist_Values__c</fullName>
        <description>Picklist values on the field in SF.</description>
        <inlineHelpText>Picklist values on the field in SF.</inlineHelpText>
        <label>Picklist Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fpro__Populate_Percentage__c</fullName>
        <description>Percentage of records this field is populated on in last X months.</description>
        <formula>VALUE(
IF(fpro__Total_Count__c = 0, TEXT(0), TEXT(fpro__Populated_On__c / fpro__Total_Count__c) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of records this field is populated on in last X months.</inlineHelpText>
        <label>Populate Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fpro__Populated_On__c</fullName>
        <description>Count of records this field is populated on in last X months.</description>
        <inlineHelpText>Count of records this field is populated on in last X months.</inlineHelpText>
        <label>Populated On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__Population_Summary__c</fullName>
        <description>Displays sample values as populated on some recent records</description>
        <inlineHelpText>Displays sample values as populated on some recent records</inlineHelpText>
        <label>(Not In Use) Population Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__Precision__c</fullName>
        <description>The precision for number values. Precision is the number of digits in a number. For example, the number 256.99 has a precision of 5.</description>
        <inlineHelpText>The precision for number values. Precision is the number of digits in a number. For example, the number 256.99 has a precision of 5.</inlineHelpText>
        <label>Precision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__Reference_To__c</fullName>
        <description>If specified, indicates a reference this field has to another object.</description>
        <inlineHelpText>If specified, indicates a reference this field has to another object.</inlineHelpText>
        <label>Reference To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__References_Apex_Class_Count__c</fullName>
        <description># of field references found on this metadata type (Apex Class).</description>
        <inlineHelpText># of field references found on this metadata type (Apex Class).</inlineHelpText>
        <label>References (Apex Class) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Apex_Class__c</fullName>
        <description>List of apex classes this field is referenced on.</description>
        <inlineHelpText>List of apex classes this field is referenced on.</inlineHelpText>
        <label>References (Apex Class)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Apex_Trigger_Count__c</fullName>
        <description># of field references found on this metadata type (Apex Trigger).</description>
        <inlineHelpText># of field references found on this metadata type (Apex Trigger).</inlineHelpText>
        <label>References (Apex Trigger) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Apex_Trigger__c</fullName>
        <description>List of apex triggers this field is referenced on.</description>
        <inlineHelpText>List of apex triggers this field is referenced on.</inlineHelpText>
        <label>References (Apex Trigger)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Flow_Count__c</fullName>
        <description># of field references found on this metadata type (Flow).</description>
        <inlineHelpText># of field references found on this metadata type (Flow).</inlineHelpText>
        <label>References (Flow) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Flow__c</fullName>
        <description>List of flows this field is referenced in.</description>
        <inlineHelpText>List of flows this field is referenced in.</inlineHelpText>
        <label>References Flow</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Formula_Fields_Count__c</fullName>
        <description># of field references found on this metadata type (Formula Fields).</description>
        <inlineHelpText># of field references found on this metadata type (Formula Fields).</inlineHelpText>
        <label>References (Formula Fields) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Formula_Fields__c</fullName>
        <description>List of formula fields this field is referenced in.</description>
        <inlineHelpText>List of formula fields this field is referenced in.</inlineHelpText>
        <label>References (Formula Fields)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Others_Count__c</fullName>
        <description># of field references found on this metadata type (Others Misc.).</description>
        <inlineHelpText># of field references found on this metadata type (Others Misc.).</inlineHelpText>
        <label>References (Others) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Others__c</fullName>
        <description>List of misc. metadata this field is referenced in.</description>
        <inlineHelpText>List of misc. metadata this field is referenced in.</inlineHelpText>
        <label>References (Others)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Page_Layouts_Count__c</fullName>
        <description># of field references found on this metadata type (Page Layouts).</description>
        <inlineHelpText># of field references found on this metadata type (Page Layouts).</inlineHelpText>
        <label>References (Page Layouts) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Page_Layouts__c</fullName>
        <description>List of page layouts this field is referenced on.</description>
        <inlineHelpText>List of page layouts this field is referenced on.</inlineHelpText>
        <label>References (Page Layouts)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Permission_Sets_Count__c</fullName>
        <description># of field references found on this metadata type (Permission Sets Visibility).</description>
        <inlineHelpText># of field references found on this metadata type (Permission Sets Visibility).</inlineHelpText>
        <label>References (Permission Sets) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Permission_Sets_Visibility__c</fullName>
        <description>List of Permission Sets this field is visible to.</description>
        <inlineHelpText>List of Permission Sets this field is visible to.</inlineHelpText>
        <label>References (Permission Sets Visibility)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Profile_Visibility_Count__c</fullName>
        <description># of field references found on this metadata type (Profile Visibility).</description>
        <inlineHelpText># of field references found on this metadata type (Profile Visibility).</inlineHelpText>
        <label>References (Profile Visibility) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Profile_Visibility__c</fullName>
        <description>List of profiles this field is visible to.</description>
        <inlineHelpText>List of profiles this field is visible to.</inlineHelpText>
        <label>References (Profile Visibility)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_ReportType_Count__c</fullName>
        <description># of field references found on this metadata type (ReportTypes).</description>
        <inlineHelpText># of field references found on this metadata type (ReportTypes).</inlineHelpText>
        <label>References (ReportType) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_ReportType__c</fullName>
        <description>List of report types this field is referenced in.</description>
        <inlineHelpText>List of report types this field is referenced in.</inlineHelpText>
        <label>References ReportType</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Reports_Count__c</fullName>
        <description># of field references found on this metadata type (Report).</description>
        <inlineHelpText># of field references found on this metadata type (Report).</inlineHelpText>
        <label>References (Reports) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Reports__c</fullName>
        <description>List of reports this field is referenced in.</description>
        <inlineHelpText>List of reports this field is referenced in.</inlineHelpText>
        <label>References Reports</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Total_Count__c</fullName>
        <description>Total # of metadata references found for this custom field.</description>
        <formula>fpro__References_Apex_Class_Count__c +
fpro__References_Apex_Trigger_Count__c +
fpro__References_Flow_Count__c +
fpro__References_Formula_Fields_Count__c +
fpro__References_Others_Count__c +
fpro__References_Page_Layouts_Count__c +
fpro__References_Profile_Visibility_Count__c +
fpro__References_Reports_Count__c +
fpro__References_ReportType_Count__c +
fpro__References_Validation_Rules_Count__c +
fpro__References_Visualforce_Components_Count__c +
fpro__References_Visualforce_Page_Count__c +
fpro__References_Workflow_Field_Updates_Count__c +
fpro__References_Workflow_Rules_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total # of metadata references found for this custom field.</inlineHelpText>
        <label>References Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Validation_Rules_Count__c</fullName>
        <description># of field references found on this metadata type (Validation Rules).</description>
        <inlineHelpText># of field references found on this metadata type (Validation Rules).</inlineHelpText>
        <label>References (Validation Rules) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Validation_Rules__c</fullName>
        <description>List of validation rules this field is referenced in.</description>
        <inlineHelpText>List of validation rules this field is referenced in.</inlineHelpText>
        <label>References (Validation Rules)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Visualforce_Components_Count__c</fullName>
        <description># of field references found on this metadata type (Visualforce Components).</description>
        <inlineHelpText># of field references found on this metadata type (Visualforce Components).</inlineHelpText>
        <label>References (Visualforce Component) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Visualforce_Components__c</fullName>
        <description>List of vf components this field is referenced on.</description>
        <inlineHelpText>List of vf components this field is referenced on.</inlineHelpText>
        <label>References (Visualforce Components)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Visualforce_Page_Count__c</fullName>
        <description># of field references found on this metadata type (Visualforce Page).</description>
        <inlineHelpText># of field references found on this metadata type (Visualforce Page).</inlineHelpText>
        <label>References (Visualforce Page) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Visualforce_Page__c</fullName>
        <description>List of vf pages this field is referenced on.</description>
        <inlineHelpText>List of vf pages this field is referenced on.</inlineHelpText>
        <label>References (Visualforce Page)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Workflow_Field_Updates_Count__c</fullName>
        <description># of field references found on this metadata type (Workflow Field Updates).</description>
        <inlineHelpText># of field references found on this metadata type (Workflow Field Updates).</inlineHelpText>
        <label>References (Workflow Field Update) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Workflow_Field_Updates__c</fullName>
        <description>List of workflow field updates this field is getting updated by.</description>
        <inlineHelpText>List of workflow field updates this field is getting updated by.</inlineHelpText>
        <label>References (Workflow Field Updates)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__References_Workflow_Rules_Count__c</fullName>
        <description># of field references found on this metadata type (Workflow Rules).</description>
        <inlineHelpText># of field references found on this metadata type (Workflow Rules).</inlineHelpText>
        <label>References (Workflow Rules) Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__References_Workflow_Rules__c</fullName>
        <description>List of workflow rules this field is referenced in (rule criteria/formula evaluation).</description>
        <inlineHelpText>List of workflow rules this field is referenced in (rule criteria/formula evaluation).</inlineHelpText>
        <label>References (Workflow Rules)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fpro__Relationship_Label__c</fullName>
        <description>Label for the relationship.</description>
        <inlineHelpText>Label for the relationship.</inlineHelpText>
        <label>Relationship Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>